--- a/IFSC_Lessons/Lista02/04_exerc.css
+++ b/IFSC_Lessons/Lista02/04_exerc.css
@@ -8,7 +8,7 @@ h1 {
     text-align: center;
     border-bottom: 1px solid #000;
     margin-top: 50px;
-    background-color: rgb(210, 210, 210);
+    background-color: rgba(210, 210, 210, 0.4);
     text-shadow: 1px 1px #fff;
 }   
 
@@ -17,6 +17,23 @@ fieldset {
     margin: auto;
     box-shadow: 5px 5px 5px rgb(110 110 110);
     background-color: aquamarine;
+    border-radius: 10px;
+    padding-bottom: 25px;
+}
+
+input[id="Aluno"]{
+    width: 60%;
+}
+
+button {
+    height: 40%;
+    width: 40%;
+    font-weight: bold;
+    font-size: 16px;
+    margin-top: 20px;
+    display: block;
+    
+
 }
 
 .btn {
@@ -49,6 +66,7 @@ label.alinha
     display: inline-block;
     text-align: left;
     margin-bottom: 10px;
+    
 }
 
 p.mostra {
